# brace-data

./: Cargo.toml  README.md  codecov.yml
.github/workflows/: ci.yml
crates/brace-data/: Cargo.toml
crates/brace-data-store/: Cargo.toml
crates/brace-data-store-postgres/: Cargo.toml
crates/brace-data-store-postgres/fixtures/: server.crt  server.key
crates/brace-data-store-postgres/src/: connection.rs  error.rs  lib.rs
crates/brace-data-store-postgres/tests/: integration.rs  plain.rs  secure.rs
crates/brace-data-store/src/: connection.rs  lib.rs  record.rs
crates/brace-data-store/src/query/: filter.rs  mod.rs  select.rs
crates/brace-data/src/: lib.rs  util.rs
crates/brace-data/src/constraint/: error.rs  mod.rs
crates/brace-data/src/constraint/types/: all.rs  and.rs  any.rs  max_length.rs  min_length.rs  mod.rs  or.rs  pattern.rs
crates/brace-data/src/data/: definition.rs  mod.rs
crates/brace-data/src/data/types/: list.rs  mod.rs  text.rs
crates/brace-data/src/types/: text.rs
scripts/: postgres-enable-tls.sh  postgres.sh  snakeoil.sh
