[package]
name = "brace-data-store-postgres"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "The postgres data store."
repository = "https://github.com/brace-rs/brace-data"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
bb8 = "0.4"
bb8-postgres = "0.4"
brace-util-future = { git = "https://github.com/brace-rs/brace-util", rev = "09890edaf265163643af3c837e416d0949599097" }
tokio = { version = "0.2", features = ["rt-core"] }
tokio-postgres = "0.5"

[dev-dependencies]
tokio = { version = "0.2", features = ["rt-core", "macros"] }
