[package]
name = "brace-data-store"
version = "0.1.0"
authors = ["Daniel Balcomb <daniel.balcomb@gmail.com>"]
description = "An API for reading and writing to a data store."
repository = "https://github.com/brace-rs/brace-data"
license = "MIT OR Apache-2.0"
edition = "2018"

[dependencies]
brace-util-future = { git = "https://github.com/brace-rs/brace-util", rev = "09890edaf265163643af3c837e416d0949599097" }

[dev-dependencies]
futures = "0.3"
indexmap = "1.3"
tokio = { version = "0.2", features = ["rt-core", "macros"] }
